# ArtificialNeuralNetwork

./: pyproject.toml  requirements.txt  test_architectures.py
examples/: train_cnn_mnist.py  train_mlp_mnist.py  train_rnn_sequence.py
src/ann_lab/: __init__.py
src/ann_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ann_lab/autoencoder/: __init__.py  autoencoder_basic.py  denoising_autoencoder.py  sparse_autoencoder.py  variational_autoencoder.py
src/ann_lab/competitive/: __init__.py  lvq.py  som.py
src/ann_lab/conv/: __init__.py  alexnet.py  densenet.py  inception.py  lenet.py  mobilenet_like.py  resnet.py  simple_cnn.py  vgg.py
src/ann_lab/core/: __init__.py  base_model.py  datasets.py  metrics.py  training_loops.py
src/ann_lab/energy/: __init__.py  boltzmann.py  dbn.py  hopfield.py  rbm.py
src/ann_lab/feedforward/: __init__.py  elm.py  mlp.py  perceptron.py  rbf_network.py
src/ann_lab/generative/: __init__.py  dcgan.py  diffusion_toy.py  gan_basic.py  wgan.py
src/ann_lab/graph/: __init__.py  gat.py  gcn.py  gnn_base.py  graphsage.py
src/ann_lab/hybrid/: __init__.py  mixture_of_experts.py
src/ann_lab/recurrent/: __init__.py  bidirectional.py  gru.py  lstm.py  rnn_basic.py  seq2seq.py
src/ann_lab/transformer/: __init__.py  attention.py  decoder_only_gpt_like.py  encoder_only_bert_like.py  transformer_encoder_decoder.py  vision_transformer.py
